Added pagination to users in backend, and corrected display of them